# rust-api-boilerplate

./: Cargo.toml
src/lib/: env.rs
src/lib/application/http/: server.rs
